--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,10 @@
 {
   "configurations": [
     {
-      "name": "C#: CleanArch.WebApi Debug",
+      "name": "C#: App Debug",
       "type": "dotnet",
       "request": "launch",
-      "projectPath": "${workspaceFolder}/CleanArch.WebApi/CleanArch.WebApi.csproj"
+      "projectPath": "${workspaceFolder}/Client/Client.csproj"
     }
   ]
 }
