--- a/WebUI/tsconfig.node.json
+++ b/WebUI/tsconfig.node.json
@@ -1,9 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "ES2023"
-    ],
+    "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
@@ -18,9 +16,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "vite.config.ts",
-    ".eslintrc.cjs",
-    "openapi-ts.config.cjs"
-  ]
+  "include": ["vite.config.ts", ".eslintrc.cjs", "openapi-ts.config.ts"]
 }
